--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -1,6 +1,6 @@
 ---
 title: Initial Comprehension Form
-layout: form
+layout: default
 ---
 <form class="form-horizontal" data-toggle="validator" action="http://forms.brace.io/tasterproject@gmail.com" method="POST">
 <fieldset>
