--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 title: About
-layout: default
+layout: defaultWithFooter
 ---
 <div>
 <h1>TASTER -  Training Attention Switching for Temper Episode Reduction.</h1>
