--- a/games.html
+++ b/games.html
@@ -1,6 +1,6 @@
 ---
 title: Games for Evalutaion
-layout: default
+layout: defaultWithFooter
 ---
 <div>
 <h2>To help us develop a great game, we're involving players in the design process. A selection of children will play the following games, then we'll ask them some questions about their preferences. This will help us determine what features we should include in our own game.</h2>
