--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -6,7 +6,7 @@ layout: default
 <fieldset>
 
 <!-- Form Name -->
-<legend>Initial Comprehension Form (When you've completed this form, don't forget to click the Send button at the bottom)</legend>
+<legend>Initial Comprehension Form. Complete this form for all games at once. When you've completed this form, don't forget to click the Send button at the bottom.</legend>
 
 <!-- Text input-->
 <div class="form-group">
