--- a/dailyFeedbackForm.html
+++ b/dailyFeedbackForm.html
@@ -6,7 +6,7 @@ layout: default
 <fieldset>
 
 <!-- Form Name -->
-<legend>Daily Feedback Form (When you've completed this form, don't forget to click the Send button at the bottom)</legend>
+<legend>Daily Feedback Form. When you've completed this form, don't forget to click the Send button at the bottom.</legend>
 
 <!-- Text input-->
 <div class="form-group">
