--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -437,13 +437,19 @@ layout: default
   </div>
 </div>
 
+<!-- Error Message -->
+<div class="form-group">
+  <label for="hiddenInput"></label>
+  <input type="hidden" id="hiddenInput" data-error="Oops">
+  <div class="help-block with-errors"></div>
+</div>
+
 <!-- Button (Double) -->
 <div class="form-group">
   <label class="col-md-4 control-label" for="initial_comp_send_button"></label>
   <div class="col-md-8">
-    <button id="initial_comp_send_button" data-error="Oops, you didn't answer all the questions" type="submit" name="initial_comp_send_button" class="btn btn-primary">Send</button>
+    <button id="initial_comp_send_button" type="submit" name="initial_comp_send_button" class="btn btn-primary">Send</button>
     <button id="initial_comp_reset_button" type="reset" name="initial_comp_reset_button" class="btn btn-default">Reset</button>
-    <div class="help-block with-errors"></div>
   </div>
 </div>
 
