--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -440,7 +440,7 @@ layout: default
 <!-- Error Message -->
 <div class="form-group">
   <label for="hiddenInput"></label>
-  <input type="hidden" id="hiddenInput" data-error="Oops">
+  <input type="text" id="hiddenInput" data-error="Oops">
   <div class="help-block with-errors"></div>
 </div>
 
