--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -437,16 +437,12 @@ layout: default
   </div>
 </div>
 
-<!-- Error Message -->
-<div class="form-group">
-  <label for="hiddenInput"></label>
-  <input type="text" id="hiddenInput" data-error="Oops">
-  <div class="help-block with-errors"></div>
-</div>
-
 <!-- Button (Double) -->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="initial_comp_send_button"></label>
+  <label class="col-md-4 control-label" for="initial_comp_send_button">Click Send when you have answered all the questions. 
+  	You should then see a confirmation page. If you don't see the confirmation page, then you've probably missed out some 
+  	questions.
+  </label>
   <div class="col-md-8">
     <button id="initial_comp_send_button" type="submit" name="initial_comp_send_button" class="btn btn-primary">Send</button>
     <button id="initial_comp_reset_button" type="reset" name="initial_comp_reset_button" class="btn btn-default">Reset</button>
