--- a/guide.html
+++ b/guide.html
@@ -16,7 +16,7 @@ layout: defaultWithFooter
 <li>Observe your child / the person you care for using the game for a brief period (less than 5 minutes).</li>
 <li>For each game, make a note of how well your child / the person you care for understands what they are supposed to do in the game (Doesn't understand at all / Understands a little / Understands well). You'll need this information later, when you complete the Initial Comprehension Form. You can show your child / the person you care for <a href="{{site.url}}/images/TASTER_comprehension_faces.png" target="_blank">this image</a>, to help them decide.</li>
 </ul>
-<li>When you have completed this process for all the games, complete the <a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a>. You'll need to complete the form in one sitting, but if you've recorded your child's / the person you care for's progress throughout, the form should only take a minute or so to complete.</li>
+<li>When you have completed this process for all the games, you and your child / the person you care for should complete the <a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a>. You'll need to complete the form in one sitting, but if you've recorded your child's / the person you care for's progress throughout, the form should only take a minute or so to complete.</li>
 <li>At this point you can explain each game further, so that your child / the person you care for fully understands how to play the game.</li>
 </li>
 </ol>
