--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -12,8 +12,8 @@ layout: default
 <div class="form-group">
   <label class="col-md-4 control-label" for="id">Your ID number</label>  
   <div class="col-md-4">
-  <input id="id" name="id" type="text" placeholder="id number" class="form-control input-md" required="">
-  <span class="help-block">Your ID number will have been sent to you by email</span>  
+  <input id="id" name="id" type="number" placeholder="id number" class="form-control input-md" data-error="Your ID is a 4 digit number" required="">
+  <span class="help-block with-errors">Your ID number will have been sent to you by email</span>  
   </div>
 </div>
 
