--- a/dailyFeedbackForm.html
+++ b/dailyFeedbackForm.html
@@ -12,7 +12,7 @@ layout: default
 <div class="form-group">
   <label class="col-md-4 control-label" for="id">Your ID number</label>  
   <div class="col-md-8">
-  <input id="id" name="id" type="text" placeholder="id number" class="form-control input-md" required="">
+  <input id="id" name="id" type="text" pattern="^[0-9]{4}$" data-error="Your ID is a 4 digit number" placeholder="id number" class="form-control input-md" required="">
   <span class="help-block">Your ID number will have been sent to you by email</span>  
   </div>
 </div>
