--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -440,8 +440,8 @@ layout: default
 <!-- Button (Double) -->
 <div class="form-group">
   <label class="col-md-9 control-label" for="initial_comp_send_button">Click Send when you have answered all the questions. 
-  	You should then see a confirmation page. If you don't see the confirmation page, then the questions you've missed out 
-  	will be highlighted in red.
+  	You should then see a confirmation page. If you don't see the confirmation page, make sure you've answered all the questions. 
+  	Any questions you've missed out will be highlighted in red.
   </label>
   <div class="col-md-3">
     <button id="initial_comp_send_button" type="submit" name="initial_comp_send_button" class="btn btn-primary">Send</button>
