--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -41,7 +41,13 @@ layout: default
       <input type="radio" name="Tealy and Orangey" id="Tealy and Orangey-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Tealy and Orangey-3">
+      <input type="radio" name="Tealy and Orangey" id="Tealy and Orangey-3" value="I understood this game well" required="">
+      I didn't play this game
+    </label>
+  </div>
   </div>
 </div>
 
