--- a/initialComprehensionForm.html
+++ b/initialComprehensionForm.html
@@ -44,8 +44,8 @@ layout: default
   </div>
   <div class="radio">
     <label for="Tealy and Orangey-3">
-      <input type="radio" name="Tealy and Orangey" id="Tealy and Orangey-3" value="I understood this game well" required="">
-      I didn't play this game
+      <input type="radio" name="Tealy and Orangey" id="Tealy and Orangey-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
     </label>
   </div>
   </div>
@@ -75,7 +75,13 @@ layout: default
       <input type="radio" name="Multitask 2" id="Multitask 2-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Multitask 2-3">
+      <input type="radio" name="Multitask 2" id="Multitask 2-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -103,7 +109,13 @@ layout: default
       <input type="radio" name="Lux Ahoy" id="Lux Ahoy-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Lux Ahoy-3">
+      <input type="radio" name="Lux Ahoy" id="Lux Ahoy-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -131,7 +143,13 @@ layout: default
       <input type="radio" name="UFO Run" id="UFO Run-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="UFO Run-3">
+      <input type="radio" name="UFO Run" id="UFO Run-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -159,7 +177,13 @@ layout: default
       <input type="radio" name="Fit it Quick" id="Fit it Quick-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Fit it Quick-3">
+      <input type="radio" name="Fit it Quick" id="Fit it Quick-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -187,7 +211,13 @@ layout: default
       <input type="radio" name="Monument Valley" id="Monument Valley-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Monument Valley-3">
+      <input type="radio" name="Monument Valley" id="Monument Valley-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -215,7 +245,13 @@ layout: default
       <input type="radio" name="99 Bricks Wizard Academy" id="99 Bricks Wizard Academy-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="99 Bricks Wizard Academy-3">
+      <input type="radio" name="99 Bricks Wizard Academy" id="99 Bricks Wizard Academy-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -243,7 +279,13 @@ layout: default
       <input type="radio" name="Mole Kart" id="Mole Kart-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Mole Kart-3">
+      <input type="radio" name="Mole Kart" id="Mole Kart-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -271,7 +313,13 @@ layout: default
       <input type="radio" name="Cordy 2" id="Cordy 2-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Cordy 2-3">
+      <input type="radio" name="Cordy 2" id="Cordy 2-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -299,7 +347,13 @@ layout: default
       <input type="radio" name="Shu's Garden" id="Shu's Garden-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Shu's Garden-3">
+      <input type="radio" name="Shu's Garden" id="Shu's Garden-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -327,7 +381,13 @@ layout: default
       <input type="radio" name="LEGO Juniors Quest" id="LEGO Juniors Quest-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="LEGO Juniors Quest-3">
+      <input type="radio" name="LEGO Juniors Quest" id="LEGO Juniors Quest-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -355,7 +415,13 @@ layout: default
       <input type="radio" name="Dr. Panda's Handyman - Free" id="Dr. Panda's Handyman - Free-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+    </div>
+    <div class="radio">
+    <label for="Dr. Panda's Handyman - Free-3">
+      <input type="radio" name="Dr. Panda's Handyman - Free" id="Dr. Panda's Handyman - Free-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+    </div>
   </div>
 </div>
 
@@ -383,7 +449,13 @@ layout: default
       <input type="radio" name="Amazing Alex Free" id="Amazing Alex Free-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Amazing Alex Free-3">
+      <input type="radio" name="Amazing Alex Free" id="Amazing Alex Free-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -411,7 +483,13 @@ layout: default
       <input type="radio" name="Toca Builders" id="Toca Builders-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Toca Builders-3">
+      <input type="radio" name="Toca Builders" id="Toca Builders-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
@@ -439,7 +517,13 @@ layout: default
       <input type="radio" name="Gravity Duck" id="Gravity Duck-2" value="I understood this game well" required="">
       I understood this game well
     </label>
-	</div>
+  </div>
+  <div class="radio">
+    <label for="Gravity Duck-3">
+      <input type="radio" name="Gravity Duck" id="Gravity Duck-3" value="I'm not going to play this game" required="">
+      I'm not going to play this game
+    </label>
+  </div>
   </div>
 </div>
 
