--- a/dailyFeedbackForm.html
+++ b/dailyFeedbackForm.html
@@ -6,7 +6,7 @@ layout: default
 <fieldset>
 
 <!-- Form Name -->
-<legend>Daily Feedback Form. When you've completed this form, don't forget to click the Send button at the bottom.</legend>
+<legend>Daily Feedback Form. When you've completed this form, don't forget to click the Submit button at the bottom.</legend>
 
 <!-- Text input-->
 <div class="form-group">
@@ -192,12 +192,12 @@ layout: default
 
 <!-- Button (Double) -->
 <div class="form-group">
-  <label class="col-md-9 control-label" for="initial_comp_send_button">Click Send when you have answered all the questions. 
+  <label class="col-md-9 control-label" for="initial_comp_send_button">Click Submit when you have answered all the questions. 
   	You should then see a confirmation page. If you don't see the confirmation page, make sure you've answered all the questions. 
   	Any questions you've missed out will be highlighted in red.
   </label>
   <div class="col-md-3">
-    <button id="dailyFeedbackSendButton" type="submit" name="dailyFeedbackSendButton" class="btn btn-primary">Send</button>
+    <button id="dailyFeedbackSendButton" type="submit" name="dailyFeedbackSendButton" class="btn btn-primary">Submit</button>
     <button id="dailyFeedbackResetButton" type="reset" name="dailyFeedbackResetButton" class="btn btn-default">Reset</button>
   </div>
 </div>
