--- a/blog.html
+++ b/blog.html
@@ -7,4 +7,5 @@ title: TASTER blog
 <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
 <p>{{ post.date | date_to_string }}</p>
 {{post.content}}
+<p class="text-right"><small>Posted by {{page.post_author}}</small></p>
 {% endfor %}
