--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@ title: TASTER blog
 ---
 
 {{post.url}}
+<div class="row">
 <div class="col-md-10">
 <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
 </div>
@@ -12,7 +13,7 @@ title: TASTER blog
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{site.url}}{{post.url}}" data-text="{{post.title}}" data-via="TasterProject" data-count="none" data-dnt="true">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
-
+</div>
 <p>{{ post.date | date_to_string }}</p>
 {{post.content}}
 <p class="text-right"><small>Posted by {{post.post_author}}</small></p>
