--- a/it/index.html
+++ b/it/index.html
@@ -1,12 +1,12 @@
 ---
 title: TASTER
-layout: defaultWithFooter
+layout: defaultWithFooter_it
 ---
 <div class="container">
   <div class="row">
-    <div class="col-md-4" style="text-align: center;"><h1>We're developing a video game</h1></div>
-    <div class="col-md-4" style="text-align: center;"><h1>to help children with Prader-Willi syndrome</h1></div>
-    <div class="col-md-4" style="text-align: center;"><h1>get better at task switching</h1></div>
+    <div class="col-md-4" style="text-align: center;"><h1>Siamo sviluppando un video game</h1></div>
+    <div class="col-md-4" style="text-align: center;"><h1>per aiutare i bambini con la Sindrome di Prederr Willi</h1></div>
+    <div class="col-md-4" style="text-align: center;"><h1>per migliorare nel task switching (cambio del compito)</h1></div>
   </div>
   <div class="row">
     <div class="col-md-4 hidden-xs hidden-sm"><img src="{{ site.url }}/images/controller.png"></div>
