--- a/it/guide.html
+++ b/it/guide.html
@@ -1,30 +1,29 @@
 ---
-title: Guide for Participants
-layout: defaultWithFooter
+title: Guida per i partecipanti
+layout: defaultWithFooter_it
 ---
 <div>
-<h1>Guide for Participants</h1>
-<h3>To help us design our game, we'd like your child / the person you care for to play a selection of games over a period of two weeks, and tell us what they think of them. The information on this page is for parents / legal guardians.</h3>
+<h1>Guida per i partecipanti</h1>
+<h3>Per aiutarci a provare i nostri giochi, ci piacerebbe che tuo figlio/a usasse una selezione di giochi per un periodo di due settimane, scrivici cosa pensa di essi. Le seguenti informazioni sono per i genitori o tutori legali.</h3>
 <h3></h3>
-<h3>At the start of the two week period:</h3>
+<h3>All'inizio delle due settimane:</h3>
 <ol>
-<li>You can see the full list of games, along with a description of each game and a video, <a href="{{site.url}}/games">here</a>. Read about each game and watch the video. If there are any games that you don't want your child / the person you care for to play, then you don't have to consider those games any further.</li>
-<li>For each game that you are happy for your child / the person you care for to play, follow this process:
+<li>Puoi vedere una lista di giochi, con una descrizione di ogni gioco e un video, <a href="{{site.url}}/games">qui</a>. Leggi per ogni gioco e vedi il video. Se ci sono giochi con cui non vuoi che il tuo bambino/a giochi, non considerarli</li>
+<li>Per ogni gioco con cui ti fa piacere far giocare tuo figlio/a, segui le seguenti istruzioni:</li>
 <ul>
-<li>Load the game in your web browser / install the game on your tablet.</li>
-<li>Present the game to your child / the person you care for, without explaining the game to them.</li>
-<li>Observe your child / the person you care for using the game for a brief period (less than 5 minutes).</li>
-<li>For each game, make a note of how well your child / the person you care for understands what they are supposed to do in the game (Doesn't understand at all / Understands a little / Understands well). You'll need this information later, when you complete the Initial Comprehension Form. You can show your child / the person you care for <a href="{{site.url}}/images/TASTER_comprehension_faces.png" target="_blank">this image</a>, to help them decide.</li>
+<li>Carica il gioco sul tuo browser web o installa il gioco sul tuo tablet.</li>
+<li>Presenta il gioco a tuo figlio/a senza spiegargli il gioco.</li>
+<li>Osserva tuo figlio/a mentre usa il gioco per un breve periodo (meno di 5 minuti).</li>
+<li>Per ogni gioco, prendi nota di come tuo figlio/a comprende quello che dovrebbe fare nel gioco (non lo comprende del tutto, comprende poco, comprende bene). Avrai bisogno di queste informazioni successivamente, quando compilerai il Modulo di Comprensione Iniziale. Puoi mostrare a tuo figlio <a href="{{site.url}}/images/TASTER_comprehension_faces.png" target="_blank">questa immagine</a>, per aiutarlo a decidere. </li>
 </ul>
-<li>When you have completed this process for all the games, you and your child / the person you care for should complete the <a href="{{site.url}}/initialComprehensionForm">Initial Comprehension Form</a>. You'll need to complete the form in one sitting, but if you've recorded your child's / the person you care for's progress throughout, the form should only take a minute or so to complete.</li>
-<li>At this point you can explain each game further, so that your child / the person you care for fully understands how to play the game.</li>
-</li>
+<li>Quando hai completato questo procedimento per ogni gioco, tu e tuo figlio/a avrete compilato <a href="{{site.url}}/initialComprehensionForm">il Modulo di Comprensione Iniziale</a>.  Sarà importante compilare il questionario in una sessione, ma se tu hai registrato tuo figlio/a durante l'apprendimento, riuscirai a completare il questionario in pochissimo tempo.</li>
+<li>A questo punto puoi spiegare ogni gioco in modo che tuo figlio/a comprenda come giocare. </li>
 </ol>
-<h3>During the two week period:</h3>
+<h3>Durante il periodo di due settimane:</h3>
 <ol>
-<li>Give your child / the person you care for free access to all the games that you are happy for them to play.</li>
-<li>At the end of each day, you and your child / the person you care for should complete the <a href="{{site.url}}/dailyFeedbackForm">Daily Feedback Form</a>.</li>
-<li>It is important that your child / the person you care for plays as many of the games as possible. Encourage them to try all the games, and not just their favourites.</li>
+<li>Dai a tuo figlio/a libero accesso a tutti i giochi con cui ti fa piacere che giochi.</li>
+<li>Alla fine di ogni giorno tu e tuo figlio/a compilate <a href="{{site.url}}/dailyFeedbackForm">il Modulo Giornaliero di Feedback</a></li>
+<li>E' importante che tuo figlio/a  con il maggior numero di giochi possibili e non solo con quelli preferiti.</li>
 </ol>
-<h3>After the two week period, a final form will become available for you and your child / the person you care for to complete.</h3>
+<h3>Dopo il periodo di due settimane, sarà disponibile un questionario finale per te e tuo figlio/a.</h3>
 </div>
