--- a/it/guide.html
+++ b/it/guide.html
@@ -8,7 +8,7 @@ layout: defaultWithFooter_it
 <h3></h3>
 <h3>All'inizio delle due settimane:</h3>
 <ol>
-<li>Puoi vedere una lista di giochi, con una descrizione di ogni gioco e un video, <a href="{{site.url}}/games">qui</a>. Leggi per ogni gioco e vedi il video. Se ci sono giochi con cui non vuoi che il tuo bambino/a giochi, non considerarli</li>
+<li>Puoi vedere una lista di giochi, con una descrizione di ogni gioco e un video, <a href="{{site.url}}/it/games">qui</a>. Leggi per ogni gioco e vedi il video. Se ci sono giochi con cui non vuoi che il tuo bambino/a giochi, non considerarli</li>
 <li>Per ogni gioco con cui ti fa piacere far giocare tuo figlio/a, segui le seguenti istruzioni:</li>
 <ul>
 <li>Carica il gioco sul tuo browser web o installa il gioco sul tuo tablet.</li>
@@ -16,13 +16,13 @@ layout: defaultWithFooter_it
 <li>Osserva tuo figlio/a mentre usa il gioco per un breve periodo (meno di 5 minuti).</li>
 <li>Per ogni gioco, prendi nota di come tuo figlio/a comprende quello che dovrebbe fare nel gioco (non lo comprende del tutto, comprende poco, comprende bene). Avrai bisogno di queste informazioni successivamente, quando compilerai il Modulo di Comprensione Iniziale. Puoi mostrare a tuo figlio <a href="{{site.url}}/images/TASTER_comprehension_faces.png" target="_blank">questa immagine</a>, per aiutarlo a decidere. </li>
 </ul>
-<li>Quando hai completato questo procedimento per ogni gioco, tu e tuo figlio/a avrete compilato <a href="{{site.url}}/initialComprehensionForm">il Modulo di Comprensione Iniziale</a>.  Sarà importante compilare il questionario in una sessione, ma se tu hai registrato tuo figlio/a durante l'apprendimento, riuscirai a completare il questionario in pochissimo tempo.</li>
+<li>Quando hai completato questo procedimento per ogni gioco, tu e tuo figlio/a avrete compilato <a href="{{site.url}}/it/initialComprehensionForm">il Modulo di Comprensione Iniziale</a>.  Sarà importante compilare il questionario in una sessione, ma se tu hai registrato tuo figlio/a durante l'apprendimento, riuscirai a completare il questionario in pochissimo tempo.</li>
 <li>A questo punto puoi spiegare ogni gioco in modo che tuo figlio/a comprenda come giocare. </li>
 </ol>
 <h3>Durante il periodo di due settimane:</h3>
 <ol>
 <li>Dai a tuo figlio/a libero accesso a tutti i giochi con cui ti fa piacere che giochi.</li>
-<li>Alla fine di ogni giorno tu e tuo figlio/a compilate <a href="{{site.url}}/dailyFeedbackForm">il Modulo Giornaliero di Feedback</a></li>
+<li>Alla fine di ogni giorno tu e tuo figlio/a compilate <a href="{{site.url}}/it/dailyFeedbackForm">il Modulo Giornaliero di Feedback</a></li>
 <li>E' importante che tuo figlio/a  con il maggior numero di giochi possibili e non solo con quelli preferiti.</li>
 </ol>
 <h3>Dopo il periodo di due settimane, sarà disponibile un questionario finale per te e tuo figlio/a.</h3>
