Begin translation of games list to language it

--- a/it/games.html
+++ b/it/games.html
@@ -1,13 +1,11 @@
 ---
-title: Games for Evalutaion
-layout: defaultWithFooter
+title: Giochi
+layout: defaultWithFooter_it
 ---
 <div>
-<h2>To help us develop a great game, we're involving players in the design process. A selection of children will play the following games, then we'll ask them some questions about their preferences. This will help us determine what features we should include in our own game.</h2>
+<h2>Per aiutartci a sviluppare un buon gioco, coinvolgiamo i giocatori nella progettazione. Un gruppo di bambini giocherà con i seguenti giochi, successivamente faremo alcune domande riguardanti le loro preferenze. Questo per aiutarci a comprendere quali caratteristiche dovremo includere nel nostro gioco.</h2>
 <h2>Tealy and Orangey</h2>
-<p>
 <h3><a href="http://onemorelevel.com/game/tealy_and_orangey" target="_blank">Play Tealy and Orangey</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Medium - High</p>
 <div style="max-width: 560px; height: auto;"
@@ -17,12 +15,10 @@ layout: defaultWithFooter
 </div>
 </div>
 <p>
-This game is free, and can be played in a browser by following the above link. The object of the game is to navigate both the teal and orange coloured balls into the chequered end zone. Both balls are controlled by the same set of controls: left and right arrow keys to move; space to jump. The game contains written instructions.
+Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul link in alto. Lo scopo del gioco è di navigare palle colorate di blu e arancione in un area a scacchi colorati. Entrambe le palle sono controllate dallo stesso set di tasti: per muoversi le frecce di sinistra e destra; spazio per saltare.  Il gioco contiene istruzioni scritte.
 </p>
 <h2>Multitask 2</h2>
-<p>
 <h3><a href="http://armorgames.com/play/11152/multitask-2" target="_blank">Play Multitask 2</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: High</p>
 <div style="max-width: 560px; height: auto;"
@@ -32,12 +28,10 @@ This game is free, and can be played in a browser by following the above link. T
 </div>
 </div>
 <p>
-This game is free, and can be played in a browser by following the above link. The object of the game is to perform a variety of different tasks simultaneously. Each time a new task is introduced, the game pauses and the controls for the new task are explained. The game contains written instructions.
+Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul link in alto. Lo scopo del gioco è quello di giocare con diversi compiti contemporaneamente. Ogni volta viene introdotto un nuovo compito, il gioco si interrompe e vengono spiegate le istruzioni per il  nuovo gioco. Il gioco contiene istruzioni scritte.
 </p>
 <h2>Lux Ahoy</h2>
-<p>
 <h3><a href="http://luxahoy.com" target="_blank">Play Lux Ahoy</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low - Medium</p>
 <div style="max-width: 560px; height: auto;"
@@ -47,12 +41,10 @@ This game is free, and can be played in a browser by following the above link. T
 </div>
 </div>
 <p>
-This game is free, and can be played in a browser by following the above link. The object of the game is to sink your opponent’s ship with your cannon. The player and computer take turns to make a single shot. The angle of each shot is controlled by the position of the mouse. Press the mouse button to charge your shot, and release to fire. The speed of the cannon ball is controlled by the length of time the mouse button is held for. This game contains some written instructions.
+Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul link in alto. Lo scopo del gioco è quello di affondare il nemico con il tuo cannone. Il giocatore e il computer si alternano nel  tirare il colpo. L'angolo di ogni colpo è controllato dalla posizione del mouse. Premi il mouse per caricare il colpo e rilascialo per sparare. La velocità della palla è controllata dal tempo della pressione sul tasto del mouse. Il gioco contiene istruzioni scritte.
 </p>
 <h2>UFO Run</h2>
-<p>
 <h3><a href="http://play.famobi.com/ufo-run" target="_blank">Play UFO Run</a><h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low - Medium</p>
 <div style="max-width: 560px; height: auto;"
@@ -62,12 +54,10 @@ This game is free, and can be played in a browser by following the above link. T
 </div>
 </div>
 <p>
-This game is free, and can be played in a browser by following the above link. The object of the game is to collect as many stars as possible while avoiding the red spikes. Pressing and holding the mouse button or spacebar raises the alien, releasing the mouse button or spacebar cause the alien to fall. The alien continually moves right automatically.
+Questo gioco è gratis, si può giocare usando il proprio browser cliccando sul link in alto. Lo scopo del gioco è quello di collezionare il maggior numero di stelle possibili ed evitare le punte rosse. Premendo tasto del mouse o la barra spaziatrice puoi sollevare l'alieno, rilasciando il bottone  o la barra spaziatrice fa cadere l'alieno. L'alieno continua a muoversi automaticamente.
 </p>
 <h2>Fit it Quick</h2>
-<p>
 <h3><a href="http://play.famobi.com/fit-it-quick" target="_blank">Play Fit it Quick</a></h3>
-</p>
 <p>Price: Free</p>
 <p>Difficulty: Low - Medium</p>
 <div style="max-width: 560px; height: auto;"
@@ -77,11 +67,11 @@ This game is free, and can be played in a browser by following the above link. T
 </div>
 </div>
 <p>
-This game is free, and can be played in a browser by following the above link. The object of the game is to fit the coloured blocks into the correct positions. The blocks are moved by clicking and dragging them with the mouse. This game contains some written instructions.
+Questo gioco è gratis, si può giocare usando il proprio brower cliccando sul link in alto. Lo scopo del gioco è quello di posizionare i blocchi colorati nella giusta posizione. Il gioco contiene istruzioni scritte.
 </p>
 <h2>Monument Valley</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.ustwo.monumentvalley" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.ustwo.monumentvalley" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/monument-valley/id728293409?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: £2.49</p>
@@ -98,7 +88,7 @@ This game costs £2.49, and can be downloaded from either the Google Play Store 
 </p>
 <h2>99 Bricks Wizard Academy</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=nl.weirdbeard.brickswizardacademy" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=nl.weirdbeard.brickswizardacademy" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/99-bricks-wizard-academy/id784444243?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free - £1.99</p>
@@ -115,7 +105,7 @@ This game is costs £1.99 on Apple devices. The game is free on Android devices.
 </p>
 <h2>Mole Kart</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.droidhen.taomee.molekart" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.droidhen.taomee.molekart" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/mole-kart-i/id522579018?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free</p>
@@ -132,7 +122,7 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </p>
 <h2>Cordy 2</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.silvertree.cordy2" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.silvertree.cordy2" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/cordy-2/id550378113?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free</p>
@@ -149,7 +139,7 @@ A limited version of this game can be downloaded for free. It is possible to buy
 </p>
 <h2>Shu’s Garden</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=ca.jasonrtbond.shusgarden" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=ca.jasonrtbond.shusgarden" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/shus-garden/id821684800?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free - £0.69</p>
@@ -166,7 +156,7 @@ This game is free on Android devices, and costs £0.69 on Apple devices. The gam
 </p>
 <h2>LEGO Juniors Quest</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.lego.juniors.quest" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.lego.juniors.quest" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/lego-juniors-quest/id845046214?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free</p>
@@ -183,7 +173,7 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </p>
 <h2>Dr. Panda’s Handyman - Free</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.tribeplay.pandahandymanlite" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.tribeplay.pandahandymanlite" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/dr.-pandas-handyman-free/id739573635?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free</p>
@@ -200,7 +190,7 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </p>
 <h2>Amazing Alex Free</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.rovio.amazingalex.trial" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.rovio.amazingalex.trial" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/amazing-alex-hd-free/id549769784?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: Free</p>
@@ -217,7 +207,7 @@ This game is free, and can be downloaded from either the Google Play Store (for 
 </p>
 <h2>Toca Builders</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.tocaboca.tocabuild" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.tocaboca.tocabuild" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/toca-builders/id652077009?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: £1.99</p>
@@ -234,7 +224,7 @@ This game costs £1.99. The game can be downloaded from either the Google Play S
 </p>
 <h2>Gravity Duck</h2>
 <p>
-<h3><a href="https://play.google.com/store/apps/details?id=com.noodlecake.gravityduck" target="_blank">Android</a> | 
+<h3><a href="https://play.google.com/store/apps/details?id=com.noodlecake.gravityduck" target="_blank">Android</a> |
 <a href="https://itunes.apple.com/gb/app/gravity.duck/id599272198?mt=8&uo=4" target="itunes_store">iOS</a></h3>
 </p>
 <p>Price: £0.54 - £0.69</p>
